crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_import_modal_invalid_header.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│   ┌ Import accounts ─────────────────────────────────────────────────────┐   │
│   │ Source:      [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:      ▶ Auto ◀    Otpauth      Aegis      Paladin      QR     │   │
│   │                                                                      │   │
│   │ On conflict: ▶ Skip ◀    Replace      Append                         │   │
│   │                                                                      │   │
│   │ invalid vault header                                                 │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
